--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MiniProject</string>
+    <string name="action_search_text">Search</string>
+    <string name="account_setting_text">Account Setting</string>
+    <string name="action_logout_text">Logout</string>
 </resources>
